--- a/assets-20250528T132244Z-1-001/assets/css/style.css
+++ b/assets-20250528T132244Z-1-001/assets/css/style.css
@@ -47,3 +47,29 @@ ul{
 .btn{
     letter-spacing: 2px;
 }
+.carousel,
+.carousel-inner,
+.carousel-item {
+    height: 100vh;
+}
+.carousel img {
+    height: 100%;
+    object-fit: cover;
+    height:100%;
+}
+.dark-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3); /* adjust opacity here */
+    z-index: 1;
+}
+.carousel-item img {
+    position: relative;
+    z-index: 0;
+}
+.thin-border {
+  border: 0.5px solid rgba(255, 255, 255, 0.4); /* Light white border */
+}
