--- a/assets-20250528T132244Z-1-001/assets/css/style.css
+++ b/assets-20250528T132244Z-1-001/assets/css/style.css
@@ -66,7 +66,8 @@ ul {
     letter-spacing: 2px;
 }
 
-.carousel,
+
+.experience > .carousel,
 .carousel-inner,
 .carousel-item {
     height: 100vh;
@@ -209,6 +210,7 @@ ul {
     background-position: center;
     background-attachment: fixed;
     position: relative;
+    overflow: visible;
 }
 .shape1 {
     position: absolute;
@@ -223,4 +225,67 @@ ul {
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
     padding: 20px;
+
+}
+.img-text{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index:2;
+    font-size:36px;
+    width:700px;
+}
+.carousel-indicators button p {
+  font-size: 14px;
+  color: white;
+  margin: 0;
+  padding: 5px 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+.carousel-indicators button.active p {
+  background-color: #AB8965;
+}
+.carousel-indicators{
+      position: absolute;
+      bottom: 38%;
+}
+.shape3{
+    width:425px;
+    height:425px;
+    border-radius: 50% 50% 0 0 ;
+    background-color:#AB8965;
+    position:relative;
+    overflow: hidden;
+}
+.img1,.img2,.img3,.img4,.img5,.img6,.img7{
+    width: 425px;
+    height: 425px;
+    background-position:center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    clip-path: polygon(0px 0px, 100% 0px, 100% 100%, 0px 100%);
+}
+.img1{
+    background-image: url('/assets/images/rooms-section/img1.webp');
+}
+.img2{
+    background-image: url('/assets/images/rooms-section/img2.webp');
+}
+.img3{
+    background-image: url('/assets/images/rooms-section/img3.webp');
+}
+.img4{
+    background-image: url('/assets/images/rooms-section/img4.webp');
+}
+.img5{
+    background-image: url('/assets/images/rooms-section/img5.webp');
+}
+.img6{
+    background-image: url('/assets/images/rooms-section/img6.webp');
+}
+.img7{
+    background-image: url('/assets/images/rooms-section/img7.webp');
 }
